--- a/final/activities.html
+++ b/final/activities.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YSA Center MPD — Activities</title>
-    <meta name="description" content="The information of all of our current and weekly activities as well as the events and invitations made by other young adults.">
+    <meta name="description"
+        content="The information of all of our current and weekly activities as well as the events and invitations made by other young adults.">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="YSA Center — Mar del Plata">
     <meta property="og:description"
-        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. You are welcome to come to our activities and learn more with us!'>
-    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/YSA.png">
+        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. Come and learn with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/ysa.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -28,9 +29,9 @@
 
 <body>
     <header>
-        <img src="images/YSA-logo.png" alt="Site Logo" width="16" height="16">
+        <img src="images/ysa-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
-        <button id="menu" class="hamburger" aria-labelledby="menu"></button>
+        <button id="menu" class="hamburger" aria-label="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -64,6 +65,7 @@
                     src="images/instagram.svg" alt="Instagram Icon" width="16" height="16"></a>
             <a href="#" target="_blank"><img src="images/threads.svg" alt="Threads Icon" width="16" height="16"></a>
         </div>
+        <a href="https://www.loom.com/share/7fc9a4358d04418c984a8aef52bbaf7e" class="video">-Loom Video-</a>
         <p>© <span id="currentyear"></span> | Sofia Angela Suarez | Argentina</p>
         <p id="lastModified"></p>
     </footer>
