--- a/final/thankyou.html
+++ b/final/thankyou.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YSA Center — Mar del Plata</title>
-    <meta name="description" content="">
+    <meta name="description" content="The confirmation of that you submitted your form.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og:title" content="">
-    <meta property="og:description" content=''>
-    <meta property="og:image" content="">
+    <meta property="og:title" content="YSA Center — Mar del Plata">
+    <meta property="og:description"
+        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. Come and learn with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/ysa.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/">
+    <link rel="Icon" href="images/ysa-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/form.js" defer></script>
@@ -27,7 +27,7 @@
 
 <body>
     <header>
-        <img src="images/" alt="Site Logo" width="16" height="16">
+        <img src="images/ysa-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
@@ -49,6 +49,7 @@
                     src="images/instagram.svg" alt="Instagram Icon" width="16" height="16"></a>
             <a href="#" target="_blank"><img src="images/threads.svg" alt="Threads Icon" width="16" height="16"></a>
         </div>
+        <a href="https://www.loom.com/share/7fc9a4358d04418c984a8aef52bbaf7e" class="video">-Loom Video-</a>
         <p>© <span id="currentyear"></span> | Sofia Angela Suarez | Argentina</p>
         <p id="lastModified"></p>
     </footer>
