--- a/final/index.html
+++ b/final/index.html
@@ -9,9 +9,9 @@
         content="The main site of the YSA Center of Mar del Plata, where you can find all the information of our group and how to find us.">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="YSA Center — Mar del Plata">
-    <meta property="og:description"
-        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. You are welcome to come to our activities and learn more with us!'>
-    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/YSA.png">
+        <meta property="og:description"
+            content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. Come and learn with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/ysa.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -24,13 +24,14 @@
     <link rel="Icon" href="images/ysa-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/visits.js" defer></script>
 </head>
 
 <body>
     <header>
-        <img src="images/YSA-logo.png" alt="Site Logo" width="16" height="16">
+        <img src="images/ysa-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
-        <button id="menu" class="hamburger" aria-labelledby="menu"></button>
+        <button id="menu" class="hamburger" aria-label="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li class="current"><a href="index.html">Home</a></li>
@@ -84,6 +85,7 @@
             <address>3944 San Luis, Mar del Plata, Buenos Aires Province, Argentina</address>
             <p>Open every Tuesday from 6:30 to 9PM and every Wednesday from 6:30 to 10:30PM</p>
         </section>
+        <p id="lastVisited" class="soon"></p>
     </main>
     <footer>
         <div class="social-media">
@@ -92,6 +94,7 @@
                     src="images/instagram.svg" alt="Instagram Icon" width="16" height="16"></a>
             <a href="#" target="_blank"><img src="images/threads.svg" alt="Threads Icon" width="16" height="16"></a>
         </div>
+        <a href="https://www.loom.com/share/7fc9a4358d04418c984a8aef52bbaf7e" class="video">-Loom Video-</a>
         <p>© <span id="currentyear"></span> | Sofia Angela Suarez | Argentina</p>
         <p id="lastModified"></p>
     </footer>
