--- a/final/share.html
+++ b/final/share.html
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <img src="images/ysa-logo.png" alt="Site Logo" width="16" height="16">
+        <img src="images/web-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
         <button id="menu" class="hamburger" aria-label="menu"></button>
         <nav id="nav-bar" class="navigation">
